# pdigest

./: README.md  pyproject.toml
src/robotics_digest/: __init__.py  main.py
src/robotics_digest/clustering/: clustering.py
src/robotics_digest/digest/: digest.py
src/robotics_digest/embeddings/: embeddings.py
src/robotics_digest/fake_data/: fake_data.py
src/robotics_digest/models/: models.py
src/robotics_digest/vector_store/: vector_store.py
